--- a/intex.html
+++ b/intex.html
@@ -1,7 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HomeWork Vasylenko Maksym</title>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <H1>Hello World</H1>
+    <!--headder-->
+    <header class="headder">
+        <nav>
+            <a href="">WebStudio</a>
+            <ul>
+                <li><a href="">Студія</a></li>
+                <li><a href="">Портфоліо</a></li>
+                <li><a href="">Контакти</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+
+
+    </header>
+
+    <main>
+        <!--banner-->
+        <div class="banner">
+            <section>
+                <h1>Ефективні рішення для <br> вашого бізнесу</h1>
+                <button>Замовити послугу</button>
+            </section>
+
+        </div>
+
+        <!--speciality-->
+        <section class="speciality">
+            <h2>Особливості</h2>
+            <ul>
+                <li>
+                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                </li>
+
+                <li>
+                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                </li>
+
+                <li>
+                    <h3>ПЛАНУВАННЯ</h3>
+                    <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+                </li>
+
+                <li>
+                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+
+            </ul>
+        </section>
+
+        <!--activity-->
+        <section class="activity">
+            <h2>Чим ми займаємося</h2>
+            <ul>
+                <li>
+                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/boxone.jpg" alt="Робочий Стіл" width="370">
+                </li>
+                <li>
+                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/boxtwo.jpg" alt="Робочий Стіл" width="370">
+                </li>
+                <li>
+                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/boxthree.jpg" alt="Робочий Стіл" width="370">
+                </li>
+
+            </ul>
+
+        </section>
+
+        <!--team-->
+        <section class="team">
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/img.jpg" alt="Чоловік в окулярах" width="270">
+                    <h3>Ігор Дем'яненко</h3>
+                    <p>Product Designer</p>
+                </li>
+
+                <li>
+                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/imgone.jpg" alt="Дівчина в окулярах" width="270">
+                    <h3>Ольга Рєпіна</h3>
+                    <p>Frontend Developer</p>
+                </li>
+
+                <li>
+                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/imgtwo.jpg" alt="Хлопець в білій сорочці" width="270">
+                    <h3>Микола Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+
+                <li>
+                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/imgthree.jpg" alt="Хлопець в окулярах" width="270">
+                    <h3>Михайло Єрмаков</h3>
+                    <p>UI Designer</p>
+                </li>
+
+            </ul>
+        </section>
+    </main>
+
+    <!--footer-->
+    <footer class="bottom">
+        <a href="">WebStudio</a>
+        <ul>
+            <li>
+                <address> м. Київ, пр-т Лесі Українки, 26 </address>
+            </li>
+            <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </footer>
+
 </body>
+
 </html>
