--- a/intex.html
+++ b/intex.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-    <H1>Hello World</H1>
     <!--headder-->
     <header class="headder">
         <nav>
@@ -70,13 +69,13 @@
             <h2>Чим ми займаємося</h2>
             <ul>
                 <li>
-                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/boxone.jpg" alt="Робочий Стіл" width="370">
+                    <img src="./img/box1.jpg" alt="Робочий Стіл" width="370">
                 </li>
                 <li>
-                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/boxtwo.jpg" alt="Робочий Стіл" width="370">
+                    <img src="./img/box2.jpg" alt="Робочий Стіл" width="370">
                 </li>
                 <li>
-                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/boxthree.jpg" alt="Робочий Стіл" width="370">
+                    <img src="./img/box3.jpg" alt="Робочий Стіл" width="370">
                 </li>
 
             </ul>
@@ -88,25 +87,25 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/img.jpg" alt="Чоловік в окулярах" width="270">
+                    <img src="./img/img1.jpg" alt="Чоловік в окулярах" width="270">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/imgone.jpg" alt="Дівчина в окулярах" width="270">
+                    <img src="./img/img2.jpg" alt="Жінка в окулярах" width="270">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/imgtwo.jpg" alt="Хлопець в білій сорочці" width="270">
+                    <img src="./img/img3.jpg" alt="Чоловік в білій сорочці" width="270">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="https://raw.githubusercontent.com/Marsym-21/goit-markup-hw-01/main/HomeWork%231/img/imgthree.jpg" alt="Хлопець в окулярах" width="270">
+                    <img src="./img/img4.jpg" alt="Хлопець в окулярах" width="270">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
