update index html file

--- a/intex.html
+++ b/intex.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>HelloWorld</h1>
+    <h1>HelloWorld213</h1>
     <!--headder-->
     <header class="headder">
         <nav>
