--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,13 +28,10 @@
 
     <main>
         <!--banner-->
-        <div class="banner">
-            <section>
-                <h1>Ефективні рішення для <br> вашого бізнесу</h1>
-                <button>Замовити послугу</button>
-            </section>
-
-        </div>
+        <section class="banner">
+            <h1>Ефективні рішення для <br> вашого бізнесу</h1>
+            <button>Замовити послугу</button>
+        </section>
 
         <!--speciality-->
         <section class="speciality">
@@ -117,13 +113,13 @@
     <!--footer-->
     <footer class="bottom">
         <a href="">WebStudio</a>
-        <ul>
-            <li>
-                <address> м. Київ, пр-т Лесі Українки, 26 </address>
-            </li>
+        <address>
+         <ul>
+            <li><a href="м. Київ, пр-т Лесі Українки, 26">м. Київ, пр-т Лесі Українки, 26 </a> </li>
             <li><a href="info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+         </ul>
+        </address>
     </footer>
 
 </body>
