--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <a href="">WebStudio</a>
         <address>
          <ul>
-            <li><a href="м. Київ, пр-т Лесі Українки, 26">м. Київ, пр-т Лесі Українки, 26 </a> </li>
+            <li><a href="https://goo.gl/maps/osiyzPxrACB18xaJ9">м. Київ, пр-т Лесі Українки, 26 </a> </li>
             <li><a href="info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="+380961111111">+38 096 111 11 11</a></li>
          </ul>
